docs/grammar.txt
# Grammar reference for Nord. Documented in roughly BNF.
program         -> statement_list ;

statement_block -> "{" statement_list "}"
statement_list  -> statement
                 | statement statement_list;


# Statements
statement       -> variable_decl
                 | expression "\n"
                 | if_statement
                 | function_decl ;
if_statement    -> "if" expression statement_block ;
function_decl   -> "fn" ( IDENTIFIER )? ( "(" variable_list ")" )* statement_block
variable_list   -> IDENTIFIER ( "," variable_list )* ;
variable_decl   -> "var" IDENTIFIER ( "=" expression ) "\n" ;

# Expressions
expression_list -> expression ( "," expression_list )* ;
expression      -> "return" assignment
                 | assignment ;
assignment      -> IDENTIFIER "=" assignment
                 | equality ;
equality        -> comparison ( ( "!=" | "==") comparison )* ;
comparison      -> term ( ( ">" | ">=" | "<" | "<=" ) term )* ;
term            -> term_md ( ( "-" | "+" ) term_md )* ;
term_md         -> unary ( ( "/" | "*" ) unary )*  ;
unary           -> ( "!" | "-" ) unary
                 | primary ;
primary         -> function_call
                 | IDENTIFIER | NUMBER | FLOAT | STRING | "true" | "false" | "nil"
                 | tuple ;
tuple           -> "(" expression_list ")";
function_call   -> IDENTIFIER "(" ( expression_list )* ")" ;
